# ComfyUI_Anytext

./: README.md  __init__.py  pyproject.toml  requirements-with-nlp-translator.txt  requirements.txt
.github/workflows/: publish.yml
Data_Process/: nodes.py  utils.py
Data_Process/Translate_Scripts/: translate_backbone.py
Image_Generation/AnyText/: README.md  nodes.py  requirements-with-nlp-translator.txt  zzz-orignal_repo.txt
Image_Generation/AnyText/AnyText_scripts/: AnyText_dataset_util.py
Image_Generation/AnyText/models_yaml/: anytext_sd15.yaml
Image_Generation/Glyph_ByT5/: nodes.py  zzz-orignal_repo.txt
Image_Generation/Glyph_SDXL/: README.md  nodes.py  requirements.txt
Image_Generation/JoyType/: README.md  nodes.py  zzz-orignal_repo.txt
Image_Generation_AnyText/: README.md  nodes.py  requirements-with-nlp-translator.txt  requirements.txt
Image_Generation_AnyText/AnyText_scripts/: AnyText_pipeline.py  AnyText_t3_dataset.py
Image_Generation_AnyText/AnyText_tools/: ms_wrapper.py  tool_add_anytext.py
Image_Generation_AnyText/assets/: README-Zh-CN.md
Image_Generation_AnyText/models_yaml/: anytext_sd15.yaml
Image_Process/Common/: nodes.py
UL_common/: common.py  diffusers_checkpoint_loader.py  diffusers_model_loader.py  diffusers_nodes.py  flux_controlnet_model_config.py  pretrained_config_dirs.py  sd15_controlnet_model_config.py  sd15_scheduler_configs.py  sdxl_controlnet_model_config.py  sdxl_scheduler_configs.py  sdxl_singlefile_model_config.py
example_workflows/: T2I-AnyText-Translator.json  T2I-AnyText.json
(+57 files in other folders)
